--- a/index.html
+++ b/index.html
@@ -50,5 +50,108 @@
                 </div>
             </div>
         </header>
+        <section class="grey">
+            <div class="container">
+                <p>
+                    Le scuole di lingua tradizionali non sono efficaci
+                </p>
+                <p>
+                    Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.
+                </p>
+            </div>
+        </section>
+        <section class="three">
+            <div class="container">
+                <div class="box">
+                    <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/profile.svg?v17" alt="piano formativo">
+                    <p>
+                        Piano formativo configurato sul proprio livello
+                    </p>
+                    <hr>
+                    <p>
+                        Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/computer.svg?v17" alt="tutor">
+                    <p>
+                        Affiancamento costante del tutor
+                    </p>
+                    <hr>
+                    <p>
+                        Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/doc.svg?v17" alt="progressi">
+                    <p>
+                        Monitora i tuoi progressi costantemente
+                    </p>
+                    <hr>
+                    <p>
+                        Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <div class="container">
+            <hr>
+        </div>
+        <section class="program">
+            <div class="container">
+                <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/mountain.svg?v17" alt="livello">
+                <div class="text">
+                    <p>
+                        Scopri il tuo livello iniziale e struttura un piano personalizzato
+                    </p>
+                    <p>
+                        L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.
+                    </p>
+                    <a href="#">Scopri il nostro test di placement</a>
+                </div>
+            </div>
+        </section>
+        <section class="grey">
+            <div class="container">
+                <span>Struttura un piano</span>
+                <div class="insert">
+                    <span>Sono</span>
+                    <input type="text" name="" value="">
+                    <a class="btn btn-primary" href="#">Visualizza il tuo piano</a>
+                </div>
+            </div>
+        </section>
+        <section class="lection">
+            <div class="container">
+                <div class="text-blue">
+                    <p>
+                        Le nostre lezioni <span>one to one</span>
+                    </p>
+                    <p>
+                        Sessioni online one to one in tempo reale della durata di 30 minuti ciascuna con tutor madrelingua inglese selezionati.
+                    </p>
+                    <p>
+                        Tutto si svolge comodamente via webcam direttamente dalla nostra piattaforma.
+                    </p>
+                    <a href="#">Tutto sulle lezioni</a>
+                </div>
+                <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/onetoone_session_pc.png?v17" alt="">
+            </div>
+        </section>
+        <section class="program">
+            <div class="container">
+                <img src="https://cdn.fluentify.com/bundles/fluentifypublic/images/r4b/01/shakehands.svg?v17" alt="livello">
+                <div class="text">
+                    <p>
+                        Solo l’inglese che ti serve davvero
+                    </p>
+                    <p>
+                        Molto più di semplici conversazioni, le sessioni coni nostri tutor ricreano le più diverse situazioni professionali.
+                    </p>
+                    <a href="#">Scopri il nostro test di placement</a>
+                    <a class="btn btn-primary" href="#">Struttura un piano</a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
